[package]
name = "byte-unit"
version = "4.0.19"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/magiclen/byte-unit"
homepage = "https://magiclen.org/byte-unit"
keywords = ["byte", "unit", "kb", "mb", "gb"]
categories = ["no-std", "parser-implementations", "value-formatting"]
description = "A library for interaction with units of bytes."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
utf8-width = "0.1"

serde = { version = "1", default-features = false, features = ["alloc"], optional = true }

[features]
default = ["std", "u128"]
serde = ["alloc", "dep:serde"]
std = ["serde/std", "alloc"]
alloc = []
u128 = []
