[package]
name = "byte-unit"
version = "5.0.3"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.60"
repository = "https://github.com/magiclen/byte-unit"
homepage = "https://magiclen.org/byte-unit"
keywords = ["byte", "unit", "kb", "mb", "gb"]
categories = ["no-std", "parser-implementations", "value-formatting"]
description = "A library for interacting with units of bytes."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
utf8-width = "0.1"

serde = { version = "1", default-features = false, features = ["alloc"], optional = true }
rust_decimal = { version = "1", default-features = false, optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = ["std", "byte"]

serde = ["alloc", "dep:serde"]
rust_decimal = ["dep:rust_decimal"]

std = ["serde/std", "alloc"]
alloc = []
u128 = []
byte = ["rust_decimal"]
bit = ["rust_decimal"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]